--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">eFahrtenbuchApp</string>
+    <string name="app_name">Fahrtenbuch1.0</string>
 </resources>
