--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="menu_changePW">Passwort Ändern</string>
     <string name="menu_logout">Logout</string>
     <string name="appName">Das Fahrtenbuch</string>
+    <string name="notificationNoLocationPermission">Zum auslesen des Standorts wird die Standort-Berechtigung gebraucht!\n\nUm diesen zu aktivieren erlaube die Berechtigung \"Standort\" in der App-Info und starte die App neu!</string>
 </resources>
